# agentstate

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.fast  FINAL_VERIFICATION.py  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  VERIFICATION_COMPLETE.md  bootstrap_milestones.sh  docker-compose.yml  integration_tests.py  load_test.py  persistence_test.py  publish_sdks.sh  test_python_sdk.py  test_suite.sh  test_typescript_sdk.js  working_verification.py
.github/: dependabot.yml
.github/workflows/: chaos-ci.yml  ci.yml  publish-sdks.yml  release.yml  sdk-publish.yml  test.yml  verify.yml
AgentStateTesting/: .env.example  DOCKER_PUBLISHING.md  README.md  docker-compose.yml  quick-start.sh
AgentStateTesting/chaos/: Dockerfile.chaos  README.md  chaos_runner.py  docker-compose.chaos.yml  nemeses.py  workload.py
AgentStateTesting/nodejs-tests/: basic-sdk-test.js  package-lock.json  package.json
AgentStateTesting/nodejs-tests/langchainjs-example/: langchainjs_demo.js  package.json
AgentStateTesting/python-tests/: basic-sdk-test.py  debug_test.py  detailed_debug.py  minimal_test.py  requirements.txt  simple_debug.py
AgentStateTesting/python-tests/crewai-example/: crewai_agentstate_demo.py
AgentStateTesting/python-tests/langchain-example/: langchain_agentstate_demo.py  test_agentstate_integration.py
blogs/: Bringing Jepsen-Style CI to a Single-Node Server.md
clients/node/watch-client/: README.md  index.mjs
clients/python/: README.md  watch_client.py
crates/agentstate-cli/: Cargo.toml
crates/agentstate-cli/src/: main.rs
crates/agentstate-core/: Cargo.toml
crates/agentstate-core/src/: errors.rs  lib.rs  model.rs  query.rs  util.rs
crates/agentstate-server/: Cargo.toml  build.rs
crates/agentstate-server/src/: main.rs  metrics.rs
crates/agentstate-storage/: Cargo.toml
crates/agentstate-storage/src/: lib.rs  mem.rs  persistent.rs  snapshot.rs  traits.rs  wal.rs  walbin.rs
data/: manifest.json
data/wal/: 00000001.wal
deploy/: production-checklist.md
deploy/grafana/: agentstate-dashboard.json
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  pvc.yaml  service.yaml
deploy/kubernetes/: agentstate-deployment.yaml  ingress.yaml
deploy/monitoring/: monitoring.yaml
docker/: Dockerfile
docs/: DEPLOY.md  architecture.md  compatibility.md  consistency.md  indexes.md  jepsen.md  perf.md  quickstart.md  watch.md
docs/admin/: live-dump-and-restore.md
docs/ops/: caps-and-regions.md  helm-upgrade.md  key-rotation.md
docs/release/: rc-plan.md
examples/multi_agent_board/: README.md  planner.py  worker.py
examples/quickstart/: nodejs_example.js  package-lock.json  package.json  python_example.py
examples/tests/: overflow_soak.py  qps_limiter.js
proto/: agentstate.proto
scripts/: generate_cap_token.py  preflight.sh  setup_dev_env.sh
sdk-py/: README.md  setup.py
sdk-py/agentstate/: __init__.py  client.py
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: index.ts
