[workspace]
members = [
  "crates/agentstate-core",
  "crates/agentstate-storage",
  "crates/agentstate-server",
  "crates/agentstate-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/agentstate"
authors = ["AgentState Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
ulid = { version = "1", features = ["serde"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
axum = { version = "0.7", features = ["json", "macros", "http1", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
futures = "0.3"
bytes = "1"
mime = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
parking_lot = "0.12"
async-trait = "0.1"
tonic = { version = "0.11", features = ["transport", "tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
async-stream = "0.3"
crc32c = "0.6"
zstd = { version = "0.13", features = ["zstdmt"] }
ciborium = { version = "0.2", features = ["std"] }
serde_cbor = "0.11"
prometheus = "0.13"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"] }
once_cell = "1.19"
