[package]
name = "agentstate-server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
agentstate-core = { path = "../agentstate-core" }
agentstate-storage = { path = "../agentstate-storage" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
mime = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
parking_lot = { workspace = true }
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = "0.23"
tokio-rustls = "0.25"
